...

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/recipe_instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/recipe_instructions"
...
            android:layout_height="wrap_content"
            android:text="@string/previousStep"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:id="@+id/nextStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextStep"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>
...
