<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView
    android:id="@+id/recipe_cards_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width='match_parent'
    android:layout_height='match_parent'>

</android.support.v7.widget.RecyclerView>
