<android.support.v7.widget.RecyclerView
    android:id="@+id/recipe_skeleton_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width='match_parent'
    android:layout_height='wrap_content'
    android:background="@color/Snow">

</android.support.v7.widget.RecyclerView>
